Update html files

--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/site.css" />
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="favicon" />
+
+    <!--Google Fonts for Racing Sans One-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
   </head>
 
   <body class="d-flex flex-column h-100">
     <!-- ==== Navbar Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top text-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="26" alt="" /> EvenOdd</a>
+        <a class="navbar-brand logoFont" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="26" alt="" /> EvenOdd</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
