--- a/app.html
+++ b/app.html
@@ -44,7 +44,42 @@
     </nav>
     <!-- ==== Main Section ==== -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-lg-2">
+          <div class="col-lg-4 col border-end border-2">
+              <h1>EvenOdd: A Coding Project</h1>
+              <h4 class="lead">
+                Live life one loop at a time. A Javascript coding exercise using loops. Write a program that displays the numbers from 0 to 100. Display the even numbers in <strong>BOLD.</strong>
+              </h4>
+              <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+              <p>Enter a starting value and a ending value. Press the button and the the value will appear.</p>
+          </div>
+          <div class="col-lg-8 col">
+              <div>
+                <h5>Enter Values</h5>
+                <form class="row gy-2 gx-3">
+                  <div class="col-6">
+                    <input id="startValue" type="number" class="form-control" placeholder="Start Value" value="0" aria-label="Start Value">
+                  </div>
+                  <div class="col-6">
+                    <input id="endValue" type="number" class="form-control" placeholder="End Value" value="100" aria-label="End Value">
+                  </div>
+                  <div class="col-12 d-flex justify-content-end mt-3">
+                    <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Display The Number</button>
+                  </div>
+                </form>
+                <h2 class="mt-5 border-bottom border-2">Results</h2>
+                <div class="table-responsive">
+                  <table class="table table-striped table-sm">
+                    <tbody id="results">
+                      <!--Results-->
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- ==== Footer Section ==== -->
     <footer class="footer mt-auto py-3 sticky-footer">
