--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- ==== Navbar Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top text-white">
       <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="26" alt="" /> EvenOdd</a>
+        <a class="navbar-brand logoFont" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="27" alt="Jsp Logo" />EvenOdd</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +38,7 @@
               <a class="nav-link" href="code.html">Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">Git Repo</a>
+              <a class="nav-link" target="_blank" href="https://github.com/JagjitPunni/EvenOdd">Git Repo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="#">About</a>
@@ -115,10 +115,10 @@
                 <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://github.com/JagjitPunni" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://twitter.com/JagjitPunni" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
               </div>
             </div>
           </div>
