--- a/app.html
+++ b/app.html
@@ -11,13 +11,18 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/site.css" />
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="favicon" />
+
+    <!--Google Fonts for Racing Sans One-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
   </head>
 
   <body class="d-flex flex-column h-100">
     <!-- ==== Navbar Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top text-white">
       <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="26" alt="" /> EvenOdd</a>
+        <a class="navbar-brand logoFont" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="27" alt="Jsp Logo" />EvenOdd</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +38,7 @@
               <a class="nav-link" href="code.html">Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">Git Repo</a>
+              <a class="nav-link" target="_blank" href="https://github.com/JagjitPunni/EvenOdd">Git Repo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="#">About</a>
@@ -50,7 +55,7 @@
             <h1>EvenOdd: A Coding Project</h1>
             <h4 class="lead">Live life one loop at a time. A Javascript coding exercise using loops. Write a program that displays the numbers from 0 to 100. Display the even numbers in <strong>BOLD.</strong></h4>
             <h2 class="mt-5 border-bottom border-2">Instructions</h2>
-            <p>Enter a starting value and a ending value. Press the button and the the value will appear.</p>
+            <p>Enter a starting value and a ending value. Press the button and the value will appear.</p>
           </div>
           <div class="col-lg-8 col">
             <div>
@@ -70,7 +75,6 @@
               <div class="table-responsive">
                 <table class="table table-striped table-sm">
                   <tbody id="results">
-                   
                     <!--Results-->
                   </tbody>
                 </table>
@@ -96,10 +100,10 @@
                 <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://github.com/JagjitPunni" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://twitter.com/JagjitPunni" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
               </div>
             </div>
           </div>
