--- a/code.html
+++ b/code.html
@@ -23,7 +23,7 @@
     <!-- ==== Navbar Section ==== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top text-white">
       <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="#"><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="27" alt="Jsp Logo" />EvenOdd</a>
+        <div class="navbar-brand logoFont" ><img src="/img/mylogo.png" class="d-inline-block align-text-top" height="27" alt="Jsp Logo" />EvenOdd</div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
